<resources>
    <string name="app_name" translatable="false">Hune</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="slogan">Luôn miễn phí</string>
    <string name="welcome_sodienthoai">Số điện thoại</string>
    <string name="welcome_matkhau">Mật khẩu</string>
    <string name="welcome_dangnhap">Đăng nhập</string>
    <string name="welcome_dangky">Đăng ký</string>
    <string name="welcome_quenmatkhau">Quên mật khẩu?</string>
    <string name="welcome_signinfacebook">Đăng nhập Facebook</string>
    <string name="welcome_dungthu">Dùng thử</string>
    <string name="quenmatkhau_title">Quên mật khẩu</string>
    <string name="quenmatkhau_nhanma">Nhận mã</string>
    <string name="quenmatkhau_huy">Hủy</string>
    <string name="dangky_title">Thông tin đăng ký</string>
    <string name="dangky_tentaikhoan">Tên tài khoản</string>
    <string name="dangky_sodienthoai">Số điện thoại</string>
    <string name="dangky_matkhau">Mật khẩu</string>
    <string name="dangky_nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="dangky_dangky">Đăng ký</string>
    <string name="dangnhap_matkhau">Mật khẩu</string>
    <string name="dangnhap_dangnhap">Đăng nhập</string>
    <string name="dangnhap_quenmatkhau">Quên mật khẩu?</string>
    <string name="dangnhap_doiso">Đổi số</string>
    <string name="dangnhap_signinfacebook">Sign in with Facebook</string>
    <string name="chonchucnang_timnguoi">Tuyển người</string>
    <string name="chonchucnang_timviec">Tìm việc</string>
    <string name="chonchucnang_chonchucnang">Chọn chức năng</string>
    <string name="chonchucnang_xacthuc">Xác thực</string>
    <string name="taolaimatkhau_title">Tạo lại mật khẩu</string>
    <string name="taolaimatkhau_matkhaumoi">Mật khẩu mới</string>
    <string name="taolaimatkhau_nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="taolaimatkhau_hoantat">Hoàn tất</string>
    <string name="chitietungvien_td_title">Chi Tiết Ứng Viên</string>
    <string name="chitietungvien_td_gioitinh">Giới tính: </string>
    <string name="chitietungvien_td_namsinh">Năm sinh: </string>
    <string name="chitietungvien_td_loaihinh">Loại hình: </string>
    <string name="chitietungvien_td_hinhtieubieu">Hình tiêu biểu: </string>
    <string name="chitietungvien_td_clickhinh">(Click vào để xem kích thước lớn hơn)</string>
    <string name="chitietungvien_td_xemdiachi">Xem địa điểm ứng viên</string>
    <string name="chitietungvien_td_danhgia">Đánh giá</string>
    <string name="chitietungvien_td_them">Thêm</string>
    <string name="danhgia_td_title">Đánh giá</string>
    <string name="danhgia_td_nhanxet">Nhận xét</string>
    <string name="danhgia_td_hoantat">Hoàn tất</string>
    <string name="danhgia_td_report">Report</string>
    <string name="caidat_td_title">Cài đặt</string>
    <string name="caidat_td_thongtin">Thông tin</string>
    <string name="caidat_td_danhgiaungdung">Đánh giá ứng dụng</string>
    <string name="caidat_td_chiaseungdung">Chia sẻ ứng dụng</string>
    <string name="caidat_td_ngonngu">Language</string>
    <string name="caidat_td_nhanthongbaopr">Nhận thông báo</string>
    <string name="caidat_td_huongdan">Hướng dẫn</string>
    <string name="caidat_td_dangxuat">Đăng xuất</string>
    <string name="dangtuyen_td_title">Đăng tuyển</string>
    <string name="dangtuyen_td_title2">Sửa thông tin</string>
    <string name="dangtuyen_td_loaihinh">Loại hình*</string>
    <string name="dangtuyen_td_congviec">Công việc*</string>
    <string name="dangtuyen_td_tieuchuan">Tiêu chuẩn</string>
    <string name="dangtuyen_td_soluong">Số lượng*</string>
    <string name="dangtuyen_td_diadiem">Nơi làm việc*</string>
    <string name="dangtuyen_td_bando">Bản đồ</string>
    <string name="dangtuyen_td_luong">Lương*</string>
    <string name="dangtuyen_td_batdau">Bắt đầu*</string>
    <string name="dangtuyen_td_ketthuc">Kết thúc*</string>
    <string name="dangtuyen_td_mota">Mô tả</string>
    <string name="dangtuyen_td_hoantat">Hoàn tất</string>
    <string name="dangtuyen_td_xacnhan">Xác nhận</string>
    <string name="dangtuyen_td_nhapluong">Nhập lương</string>
    <string name="dangtuyen_td_ngaybatdau">Ngày bắt đầu</string>
    <string name="dangtuyen_td_ngayketthuc">Ngày kết thúc</string>
    <string name="dangtuyen_td_chonbando">Chọn bản đồ</string>
    <string name="dangtuyen_td_tieude">Tiêu đề*</string>
    <string name="dangtuyend_td_nhaptieude">Nhập tiêu đề</string>
    <string name="dangtuyen_td_nhapsoluong">Nhập số lượng</string>
    <string name="dangtuyen_td_nhapnoilamviec">Nhập nơi làm việc</string>
    <string name="dangtuyen_td_nhapmota">Nhập mô tả (Nếu có)</string>
    <string name="toast_vuilongclick">Địa điểm bạn nhập không tồn tại</string>
    <string name="toast_thanhcong">Đặt dịch vụ thành công</string>
    <string name="locthongtin_td_title" translatable="false">Lọc thông tin</string>
    <string name="locthongtin_td_theoloaihinh">Theo loại hình</string>
    <string name="locthongtin_td_theogioitinh" translatable="false">Theo Giới tính</string>
    <string name="locthongtin_td_chapnhan">Chấp nhận</string>
    <string name="locthongtin_td_nam" translatable="false">Nam</string>
    <string name="locthongtin_td_nu" translatable="false">Nữ</string>
    <string name="trangcanhan_td_title">Trang cá nhân</string>
    <string name="trangcanhan_td_gioitinh">Giới tính:</string>
    <string name="trangcanhan_td_namsinh">Năm sinh:</string>
    <string name="trangcanhan_td_caidat">Cài đặt</string>
    <string name="suathongtin_td_title">Sửa thông tin cá nhân</string>
    <string name="suathongtin_td_hoten">Họ tên</string>
    <string name="suathongtin_td_gioitinh">Giới tính</string>
    <string name="suathongtin_td_namsinh">Năm sinh</string>
    <string name="suathongtin_td_dienthoai">Điện thoại</string>
    <string name="thongtintimviec_td_title">Danh sách ứng viên</string>
    <string name="thongtindaluu_td_title">Thông tin đã lưu</string>
    <string name="toast_suadoithanhcong">Thông tin đã được thay đổi thành công</string>
    <string name="toast_khongcothongtinthaydoi">Không có thông tin thay đổi</string>
    <string name="toast_ngaybatdaukhongduoclonhonnhayketthuc">Ngày bắt đầu không thể lớn hơn ngày kết thúc</string>
    <string name="danhsachyeuthich_td_title">Danh sách yêu thích</string>
    <string name="quanlydangtuyen_td_title">Quản lý đăng tuyển</string>
    <string name="profile_td_title">Profile</string>
    <string name="profile_td_trangcanhan">Trang cá nhân</string>
    <string name="profile_td_danhsachungvien">Ứng Viên Phù Hợp</string>
    <string name="profile_td_quanlydangtimnguoi">Quản Lý Đăng Tuyển Người</string>
    <string name="profile_td_danhsachyeuthich">Danh Sách Yêu Thích</string>
    <string name="profile_td_luuthongtin">Lưu Thông Tin</string>
    <string name="profile_td_chonlaichucnang">Chọn Lại Chức Năng</string>
    <string name="profile_td_caidat">Cài Đặt</string>
    <string name="thongbao_td_title">Thông báo</string>
    <string name="thongbao_td_tuyendung">Tuyển dụng</string>
    <string name="thongbao_td_hethong">Hệ thống</string>
    <string name="timnguoi_td_title">Tuyển người</string>
    <string name="timnguoi_td_dangtimnguoi">Đặt Dịch Vụ</string>
    <string name="timviec_title">Tìm việc</string>
    <string name="timviec_dangtimviec">Đăng Tìm Việc</string>
    <string name="thongbao_tv_title">Thông báo</string>
    <string name="thongbao_tv_timviec">Tìm việc</string>
    <string name="thongbao_tv_hethong">Hệ thống</string>
    <string name="dialog_dadoctatca">Đã đọc tất cả</string>
    <string name="thongtintuyendung_tv_title">Danh sách việc làm</string>
    <string name="profile_tv_title">Profile</string>
    <string name="profile_tv_trangcanhan">Trang cá nhân</string>
    <string name="profile_tv_danhsachtimnguoi">Việc Làm Phù Hợp</string>
    <string name="profile_tv_quanlydangtimviec">Quản Lý Đăng Tìm Việc</string>
    <string name="profile_tv_danhsachyeuthich">Danh Sách Yêu Thích</string>
    <string name="profile_tv_luuthongtin">Lưu Thông Tin</string>
    <string name="profile_tv_chonlaichucnang">Chọn Lại Chức Năng</string>
    <string name="profile_tv_caidat">Cài Đặt</string>
    <string name="chitietcongviec_tv_title">Chi Tiết Công Việc</string>
    <string name="chitietcongviec_tv_loaihinh">Loại hình:</string>
    <string name="chitietcongviec_tv_tieude">Tiêu đề:</string>
    <string name="chitietcongviec_tv_mota">Mô tả:</string>
    <string name="chitietcongviec_tv_soluong">Số lượng:</string>
    <string name="chitietcongviec_tv_diadiem">Địa điểm:</string>
    <string name="chitietcongviec_tv_luong">Lương:</string>
    <string name="chitietcongviec_tv_ngaybatdau">Ngày bắt đầu:</string>
    <string name="chitietcongviec_tv_ngayketthuc">Ngày kết thúc:</string>
    <string name="chitietcongviec_tv_danhgia">Đánh giá</string>
    <string name="chitietcongviec_tv_xembando">(Xem bản đồ)</string>
    <string name="themvieclam_tv_title">Thêm việc làm</string>
    <string name="themvieclam_tv_chonloaihinh">Chọn loại hình*</string>
    <string name="themvieclam_tv_congviec">Công việc*</string>
    <string name="themvieclam_tv_tieude">Tiêu đề*</string>
    <string name="themvieclam_tv_bando">Bản đồ</string>
    <string name="themvieclam_tv_mota">Mô tả</string>
    <string name="themvieclam_tv_anhtieubieu">Ảnh tiêu biểu (Nhấp vào để chọn hình)</string>
    <string name="themvieclam_tv_taianhdaidien">Tải ảnh đại diện</string>
    <string name="themvieclam_tv_tailen">Tải lên</string>
    <string name="themvieclam_tv_dangtin">Đăng tin</string>
    <string name="themvieclam_tv_nhapmota">Nhập mô tả(Nếu có)</string>
    <string name="chonngonngu">Chọn ngôn ngữ</string>
    <string name="chonngonngu_vietnamese" translatable="false">Tiếng việt</string>
    <string name="chonngonngu_english" translatable="false">English</string>
    <string name="chonngonngu_ngonnguhientai">Ngôn ngữ hiện tại</string>
    <string name="quanlytindang_tv_title">Quản lý tin đăng</string>
    <string name="map_picker_title">Xem địa điểm</string>
    <string name="locthongtin_tv_title" translatable="false">Lọc thông tin</string>
    <string name="locthongtin_tv_theoloaihinh">Theo loại hình</string>
    <string name="locthongtin_tv_theogioitinh" translatable="false">Theo Giới tính</string>
    <string name="locthongtin_tv_mucluong" translatable="false">Mức lương</string>
    <string name="locthongtin_tv_chapnhan" translatable="false">Chấp nhận</string>
    <string name="locthongtin_tv_nam" translatable="false">Nam</string>
    <string name="locthongtin_tv_nu" translatable="false">Nữ</string>
    <string name="suavieclam_tv_title">Sửa việc làm</string>
    <string name="suavieclam_tv_xacnhan">Xác nhận</string>
    <string name="chonchucnang_ngonngu">Ngôn ngữ</string>
    <string name="location_ads">Quảng Cáo Khu Vực</string>
    <string name="amount_money">Số tiền</string>
    <string name="location">Vị trí</string>
    <string name="count_day">Số ngày</string>
    <string name="select_count_day">Chọn số ngày quảng cáo</string>
    <string name="continuee">Tiếp tục</string>
    <string name="objective_ads">Đối tượng quảng cáo</string>
    <string name="select_location_ads">Chọn vị trí quảng cáo</string>
    <string name="sex">Giới tính</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="all">Tất cả</string>
    <string name="work_information">Thông tin việc làm</string>
    <string name="enter_amount_pay">Nhập số tiền thanh toán</string>
    <string name="pay_type">Hình thức thanh toán</string>
    <string name="hune_cash">Hune Cash</string>
    <string name="cash">Tiền mặt</string>
    <string name="pay">Thanh toán</string>
</resources>