<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quenmatkhau"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:scaleType="centerInside"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txtSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textColor="@color/colorTextWhite"
        android:textStyle="italic"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtSlogan"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="85dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quenmatkhau_title"
            android:textAlignment="center"
            android:textColor="@color/colorTextWhite"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edittext_login"
            android:hint="@string/welcome_sodienthoai"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnGetCode"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button_login"
            android:text="@string/quenmatkhau_nhanma"
            android:textColor="@color/colorTextWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/quenmatkhau_huy"
            android:textColor="@color/colorTextWhite"
            android:textStyle="italic" />

    </LinearLayout>

</RelativeLayout>