<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".uiv2.QuangCaoKhuVucStep2TuyenDungActivity"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/color_main"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imv_back"
                android:layout_width="@dimen/size_icon_toolbar"
                android:layout_height="@dimen/size_icon_toolbar"
                android:layout_centerVertical="true"
                android:padding="12.5dp"
                android:src="@mipmap/ic_back_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/location_ads"
                android:textColor="@color/colorTextWhite"
                android:textSize="@dimen/size_text_toolbar" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_continue"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/objective_ads"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorViewSpace" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/text_size_13sp" />

                    <TextView
                        android:id="@+id/tv_select_address"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/custom_edittext_danhgia_tuyendung"
                        android:gravity="center_vertical|left"
                        android:inputType="number"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/select_location_ads"
                        android:textColorHint="@color/colorText"
                        android:textSize="@dimen/text_size_13sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sex"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_size_13sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/ckb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male"
                        android:textColor="@color/color_main"
                        android:textSize="@dimen/text_size_13sp" />

                    <CheckBox
                        android:id="@+id/ckb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female"
                        android:textColor="@color/color_main"
                        android:textSize="@dimen/text_size_13sp" />

                    <CheckBox
                        android:id="@+id/ckb_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/all"
                        android:textColor="@color/color_main"
                        android:textSize="@dimen/text_size_13sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnl_num_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lnl_target"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/count_day"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/text_size_13sp" />

                    <TextView
                        android:id="@+id/tv_select_num_day"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/custom_edittext_danhgia_tuyendung"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="10dp"
                        android:text="@string/select_count_day" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_button_danhgia_tuyendung"
        android:text="@string/continuee"
        android:textColor="@color/colorTextWhite"
        android:textSize="20sp" />
</RelativeLayout>