<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/color_main"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imv_back"
                android:layout_width="@dimen/size_icon_toolbar"
                android:layout_height="@dimen/size_icon_toolbar"
                android:layout_centerVertical="true"
                android:padding="12.5dp"
                android:src="@mipmap/ic_back_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/work_information"
                android:textColor="@color/colorTextWhite"
                android:textSize="@dimen/size_text_toolbar" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_payment"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/amount_money"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_13sp" />

            <EditText
                android:id="@+id/ed_balance"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/custom_edittext_danhgia_tuyendung"
                android:enabled="false"
                android:hint="@string/enter_amount_pay"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/colorText"
                android:textSize="@dimen/text_size_13sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/pay_type"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <CheckBox
                android:id="@+id/ckb_hune_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hune_cash"
                android:textAllCaps="true"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_15sp" />

            <CheckBox
                android:id="@+id/ckb_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cash"
                android:textAllCaps="true"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_15sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_payment"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button_danhgia_tuyendung"
        android:text="@string/pay"
        android:textColor="@color/colorTextWhite"
        android:textSize="20sp" />
</RelativeLayout>